Update tags on posts

--- a/_posts/2015-06-01-from-google-io-2015.md
+++ b/_posts/2015-06-01-from-google-io-2015.md
@@ -3,7 +3,13 @@ layout: post
 title: "From Google I/O 2015"
 description: "The Google I/O 2015 keynote in 10 minutes."
 category: Developer
-tags: [mobile,android,development,plugins,ide,googleio,2015]
+tags:
+- mobile
+- android
+- development
+- plugins
+- ide
+- googleio-2015
 ---
 
 On May 28, 2015 at 9:30 started in San Francisco the [Google I/O 2015](https://events.google.com/io2015/) developer conference with a live keynote from Sundar Pichai.
@@ -17,4 +23,3 @@ If you want to follow the whole keynote here is the video from [Google Developer
 <iframe width="560" height="315" src="https://www.youtube.com/embed/7V-fIGMDsmE" frameborder="0" allowfullscreen></iframe>
 
 If you want to dive deeper on the updates of this Google I/O edition you can read [The 12 most important announcements from Google I/O 2015](http://www.theverge.com/2015/5/28/8676769/google-io-2015-highlights-announcements-recap).
-
