--- a/_posts/2015-06-01-from-google-io-2015.md
+++ b/_posts/2015-06-01-from-google-io-2015.md
@@ -2,11 +2,10 @@
 layout: post
 title: "From Google I/O 2015"
 description: "The Google I/O 2015 keynote in 10 minutes."
-category: Developer
 tags:
 - mobile
 - android
-- development
+- developer
 - plugins
 - ide
 - googleio 2015
